<resources>

    <string name="app_name">Vehicles-sharing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="sex">Sex</string>
    <string name="phonenumber">Phone Number</string>
    <string name="birthday">Birth Day</string>
    <string name="rate">Rate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update_profile">Update profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="comfirm_password">Comfirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="address">Address</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="facebook_app_id">236272210112206</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_web_client_id1">1093380309543-o85979qbsnp54ppfi91m1pdaceb4p86o.apps.googleusercontent.com</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="sexs_array">
        <item>Male</item>
        <item>Female</item>
        <item>Middle</item>
    </string-array>

    <string-array name="country_array">
        <item></item>
        <item>Vietnam</item>
        <item>Laos</item>
    </string-array>
    <string-array name="province_array">
        <item></item>
        <item>TP HCM</item>
        <item>Hanoi</item>
    </string-array>
    <string-array name="district_array">
        <item></item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="vehicle_type">
        <item>Car</item>
        <item>Bike</item>
    </string-array>
</resources>
