<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:drawableLeft="@drawable/current_password"
            android:inputType="textPassword"
            android:id="@+id/ed_current_password"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:drawableLeft="@drawable/password"
            android:id="@+id/ed_new_password"/>>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/comfirm_password"
            android:drawableLeft="@drawable/comfirmpassword"
            android:id="@+id/ed_comfirm_password"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_info_change"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btn_submit"
            android:text="@string/submit"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>