<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/image_male"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:civ_border_color="#95a5a6"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/image_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_text_profile_small" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <RatingBar
                    android:id="@+id/rb_vvm"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="5"
                    android:progressTint="@color/yellow"
                    android:rating="5"
                    android:stepSize="0.1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@color/backgroud_bottom_profile"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TableRow android:layout_margin="@dimen/margin_field_profile">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:textColor="@color/colortextprofile" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_profile_line"
                android:layout_marginRight="@dimen/margin_profile_line"
                android:background="@color/color_line_field" />

            <TableRow android:layout_margin="@dimen/margin_field_profile">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phonenumber"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:textColor="@color/colortextprofile" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_profile_line"
                android:layout_marginRight="@dimen/margin_profile_line"
                android:background="@color/color_line_field" />

            <TableRow android:layout_margin="@dimen/margin_field_profile">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthday"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:textColor="@color/colortextprofile" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_profile_line"
                android:layout_marginRight="@dimen/margin_profile_line"
                android:background="@color/color_line_field" />

            <TableRow android:layout_margin="@dimen/margin_field_profile">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:textColor="@color/colortextprofile" />
            </TableRow>


        </TableLayout>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@color/button_edit_profile"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>